--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,9 @@ nav ul li a {
 footer {
     text-align: center;
     margin: auto;
+    background-color: #333; /* Warna latar belakang box */
+    padding: 20px; /* Padding di sekitar konten footer */
+    border-radius: 10px; /* Membuat sudut lebih melengkung */
 }
 
 footer p {
