--- a/styles.css
+++ b/styles.css
@@ -244,10 +244,10 @@ nav ul li a {
     background-color: rgba(255, 255, 255, 0.2); /* Efek hover */
     transition: background-color 0.3s;
 }
-footer {
+footer { 
     text-align: center;
     margin: auto;
-    background-color: #333; /* Warna latar belakang box */
+    background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
     padding: 20px; /* Padding di sekitar konten footer */
     border-radius: 10px; /* Membuat sudut lebih melengkung */
 }
