--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,13 @@ nav ul li a {
     text-decoration: none;
 }
 
+nav ul li a.active {
+            text-decoration: underline;
+            text-underline-offset: 5px; 
+            text-decoration-thickness: 2px; 
+            color: aqua; 
+        }
+
 .social-icons {
     display: flex;
     gap: 10px; /* Menambahkan properti gap untuk memisahkan ikon sosial */
@@ -256,6 +263,7 @@ nav ul li a {
 footer { 
     text-align: center;
     margin: auto;
+    color: aqua;
     background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
     padding: 20px; /* Padding di sekitar konten footer */
     border-radius: 10px; /* Membuat sudut lebih melengkung */
